--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,8 @@ export(set_bounds_check)
 export(set_endian)
 export(set_eof_check)
 export(set_integer_promotion)
-export(write_double)
+export(set_na_check)
+export(write_dbl)
 export(write_f16)
 export(write_f32)
 export(write_f64)
