--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: ctypesio
 Type: Package
 Title: Read and Write C Types
-Version: 0.1.0.9000
+Version: 0.1.0.9001
 Authors@R: c(
-    person("Mike", "Cheng", role = c("aut", "cre", 'cph'), email = "mikefc@coolbutuseless.com")
+    person("Mike", "Cheng", role = c("aut", "cre", 'cph'), email = "mikefc@coolbutuseless.com"),
+    person("Anne", "Fu", role = "ctb", comment = c("Better UTF-8 support", ORCID = "0000-0002-9025-6071"))
     )
 Maintainer: Mike Cheng <mikefc@coolbutuseless.com>
 Description: Read and write C types from a connection.
