--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,18 @@
 Package: ctypesio
 Type: Package
-Title: Read and Write C Types
-Version: 0.1.0.9004
+Title: Read and Write Standard C Types from Files, Connecctions and Raw Vectors
+Version: 0.1.0.9005
 Authors@R: c(
     person("Mike", "Cheng", role = c("aut", "cre", 'cph'), email = "mikefc@coolbutuseless.com"),
     person("Anne", "Fu", role = "ctb", comment = c("Better UTF-8 support", ORCID = "0000-0002-9025-6071"))
     )
 Maintainer: Mike Cheng <mikefc@coolbutuseless.com>
-Description: Read and write C types from a connection.
+Description: Interacting with binary files can be difficult because R's types
+    are a subset of what is generally supported by 'C'.  This package provides a 
+    suite of functions for reading and writing binary data (with files, connections, 
+    and raw vectors) using 'C' type descriptions.  These functions convert data
+    between 'C' types and R types while checking for values outside the 
+    type limits, 'NA' values, etc.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
